--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ html {
   height: 100%;
 }
 body {
-  font-family: verdana, arial, helvetica, sans-serif;
+  font-family: Roboto, Ubuntu, verdana, arial, helvetica, sans-serif;
   font-size: 14px;
   position: absolute;
   top: .25em;
